--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,9 @@ body{
 }
 
 h2{
+
   color:#737b9c;
+text-align: center
 }
 
 .agrupa{
@@ -16,4 +18,41 @@ h2{
     margin: auto;
     background: #f7eacd;
     border-radius: 7px;
+}
+
+.caja {
+  width: 80%;
+  color: #5878ca(109, 111, 112);
+  font-size: 18px;
+  font-weight: 400;
+  text-align: center;
+  background: #AFC2CA;
+  margin: 0 0 25px;
+  overflow: hidden;
+  padding: 20px;
+  border-radius: 35px 0px 35px 0px;
+  -moz-border-radius: 35px 0px 35px 0px;
+  -webkit-border-radius: 35px 0px 35px 0px;
+  border: 2px solid #79799F;
+  }
+
+  
+    .boton_personalizado{
+      align-self: center;
+      text-decoration: none;
+      padding: 10px;
+      margin: 0 0 25px;
+      overflow: hidden;
+      font-weight: 600;
+      font-size: 15px;
+      color: #ffffff;
+      background-color: #72799f;
+      border-radius: 6px;
+      border: 2px solid #72799F;
+    }
+
+.caja_botones{
+
+  align-self: center;
+
 }
